opam-version: "2.0"
name: "interface-prime-lwt"
version: "~dev"
synopsis: "Interfaces for abstracting stuff (LWT implementation)"
maintainer: "Dorian <dorian@vereia.com>"
authors: "Dorian <dorian@vereia.com>"
build: [
  ["dune" "build" "-p" name]
]
depends: [
  "interface-prime"
  "lwt" {>= "4.1.0"}
]
dev-repo: "git+https://github.com:dozzman/interface_prime.git"
